<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_login_option"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOptionsActivity">

    <LinearLayout
        android:id="@+id/ll_login_option_content_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/ll_login_options_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_login_option_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_login_options_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleLarge" />

        <TextView
            android:id="@+id/tv_login_options_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBodySmall" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_options_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_rounded_background"
        android:gravity="center"
        android:maxWidth="768dp"
        android:minWidth="512dp"
        android:orientation="vertical"
        android:paddingTop="32dp"
        android:paddingBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_login_options_identification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/enter_as"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBodySmall" />

        <Button
            android:id="@+id/btn_login_option_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/customer" />

        <Button
            android:id="@+id/btn_login_option_professional"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/professional" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>